// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGroupMessageKeys discards previous feedback 1`] = `
Object {
  "0": Object {
    "isVisitor": undefined,
    "messageKeys": Array [
      3,
    ],
  },
}
`;

exports[`getGroupMessageKeys groups message keys by isVisitor 1`] = `
Object {
  "0": Object {
    "isVisitor": undefined,
    "messageKeys": Array [
      0,
      1,
    ],
  },
  "1": Object {
    "isVisitor": true,
    "messageKeys": Array [
      2,
    ],
  },
  "2": Object {
    "isVisitor": undefined,
    "messageKeys": Array [
      3,
    ],
  },
}
`;

exports[`getGroupMessageKeys handles feedback appropriately 1`] = `
Object {
  "0": Object {
    "isVisitor": undefined,
    "messageKeys": Array [
      0,
    ],
  },
  "1": Object {
    "isVisitor": true,
    "messageKeys": Array [
      1,
    ],
  },
  "2": Object {
    "isVisitor": undefined,
    "messageKeys": Array [
      2,
      8,
    ],
  },
  "3": Object {
    "isVisitor": true,
    "messageKeys": Array [
      9,
    ],
  },
}
`;

exports[`getGroupMessages returns messages according to passed in keys 1`] = `
Array [
  "one",
  "two",
]
`;

exports[`getLastScreenClosed returns conversation lastScreenClosed 1`] = `123`;

exports[`getLastScroll returns conversation lastScroll 1`] = `123`;

exports[`getMessages returns the messages 1`] = `
Map {
  "1" => Object {
    "message": "Thing 1",
  },
  "2" => Object {
    "message": "Thing 2",
  },
}
`;

exports[`makeGetGroupMessages returns messages with articles embedded 1`] = `
Array [
  Object {
    "articles": Array [
      Object {
        "id": 1,
      },
      Object {
        "id": 2,
      },
    ],
    "sessionID": "123",
    "type": "results",
  },
]
`;
